--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -34,5 +34,21 @@
     background-color: var(--primary-hover);
 }
 
+.arrow {
+    display: inline-block;
+
+    margin-left: 10px;
+}
+
+.down {
+    transform: rotate(90deg);
+    transition: all 0.2s;
+}
+
+.primary svg,
+    .ghost:hover svg {
+    fill: var(--white);
+}
+
 
 
