--- a/layout/Footer/Footer.module.css
+++ b/layout/Footer/Footer.module.css
@@ -1,24 +1,22 @@
 .footer {
-    display: grid;
+	display: grid;
+	grid-template-columns: 1fr auto auto;
+	gap: 10px 40px;
+	color: var(--white);
+	font-size: 16px;
+	line-height: 20px;
 
-    padding: 25px 30px;
-
-    color: var(--white);
-
-    background: var(--primary);
-
-    font-size: 16px;
-    line-height: 16px;
-    grid-template-columns: 1fr auto auto;
-    gap: 40px;
+	background: var(--primary);
+	padding: 25px 30px;
 }
 
 .footer a:hover {
-    color: var(--gray-light);
+	color: var(--gray-light);
 }
 
-@media (width <= 765px) {
-    .footer {
-        grid-template-columns: 1fr auto auto;
-    }
+@media (max-width: 765px) {
+	.footer {
+		grid-template-columns: 1fr;
+	}
+
 }
