--- a/page-components/TopPageComponent/TopPageComponent.module.css
+++ b/page-components/TopPageComponent/TopPageComponent.module.css
@@ -3,6 +3,7 @@
     grid-template-columns: auto 1fr auto;
     place-items: baseline left;
     gap: 20px;
+    margin-bottom: 30px;
 }
 
 .hhTitle {
@@ -37,3 +38,8 @@
     line-height: 27px;
 }
 
+@media screen and (width <= 640px) {
+    .title {
+
+    }
+}
