--- a/components/Textarea/Textarea.module.css
+++ b/components/Textarea/Textarea.module.css
@@ -1,6 +1,6 @@
-.input {
+.textarea {
     padding: 7px 15px;
-
+    width: 100%;
     color: var(--black);
     border: none;
     border-radius: 5px;
@@ -14,6 +14,22 @@
     line-height: 22px;
 }
 
-.input ::placeholder {
+.textarea ::placeholder {
     color: var(--gray);
 }
+
+.error {
+    border: 1px solid var(--red);
+}
+
+.errorMessage {
+    position: absolute;
+    bottom: -15px;
+    left: 0;
+    color: var(--red);
+}
+
+.textareaWrapper {
+    position: relative;
+}
+
