--- a/layout/Layout.module.css
+++ b/layout/Layout.module.css
@@ -12,7 +12,7 @@
 
 .header {
 	grid-area: header;
-	display: none;
+
 }
 
 .sidebar {
@@ -34,14 +34,11 @@
 			"header"
 			"body"
 			"footer";
+		gap: 10px;
 	}
 
 	.sidebar {
 		display: none !important;
-	}
-
-	.header {
-		display: block;
 	}
 
 	.body {
