--- a/components/ReviewForm/ReviewForm.module.css
+++ b/components/ReviewForm/ReviewForm.module.css
@@ -43,7 +43,8 @@
     position: absolute;
     top: 20px;
     right: 20px;
-    cursor: pointer;
+    border: none;
+    background: none;
 }
 
 .info {
