--- a/layout/Layout.module.css
+++ b/layout/Layout.module.css
@@ -1,47 +1,62 @@
 .wrapper {
-	display: grid;
-	grid-template-columns: auto 230px minmax(320px, 1200px) auto;
-	grid-template-rows: auto 1fr auto;
-	min-height: 100vh;
-	gap: 40px 30px;
-	grid-template-areas:
-	". header header ."
-	". sidebar body ."
-	"footer footer footer footer";
+    display: grid;
+    grid-template: ". header header ." auto ". sidebar body ." 1fr "footer footer footer footer" auto / auto 230px minmax(320px, 1200px) auto;
+
+    min-height: 100vh;
+    gap: 40px 30px;
 }
 
 .header {
-	grid-area: header;
+    grid-area: header;
 
 }
 
 .sidebar {
-	grid-area: sidebar;
+    grid-area: sidebar;
 }
 
 .body {
-	grid-area: body;
+    grid-area: body;
+    outline: none;
+}
+
+.skipLink {
+    position: fixed;
+    top: 0;
+    left: 100px;
+
+    display: block;
+    overflow: hidden;
+
+    height: 0;
+
+    color: var(--white);
+    background: var(--primary);
+}
+
+.displayed {
+    height: auto;
 }
 
 .footer {
-	grid-area: footer;
+    grid-area: footer;
 }
 
-@media (max-width: 765px) {
-	.wrapper {
-		grid-template-columns: minmax(320px, 1fr);
-		grid-template-areas:
+@media (width <= 765px) {
+    .wrapper {
+        grid-template-columns: minmax(320px, 1fr);
+        grid-template-areas:
 			"header"
 			"body"
 			"footer";
-		gap: 10px;
-	}
+        gap: 10px;
+    }
 
-	.sidebar {
-		display: none !important;
-	}
+    .sidebar {
+        display: none !important;
+    }
 
-	.body {
-		padding: 15px;
-	}
+    .body {
+        padding: 15px;
+    }
 }
